Azure Snapshot Builder Integration Test
Integration test that loads tabular data via test files

move get concepts to actual test

cleanup